deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-kafka-kubernetes-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: golang-kafka-kubernetes-microservice
  template:
    metadata:
      labels:
        app: golang-kafka-kubernetes-microservice
    spec:
      containers:
      - name: golang-kafka-kubernetes-microservice
        image: golang-kafka-kubernetes-microservice:latest
        ports:
        - containerPort: 8080
