deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-kafka-kubernetes-microservice
spec:
  selector:
    app: golang-kafka-kubernetes-microservice
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
